# Pod-Tracker

./: .env.example  .erb_lint.yml  .gitignore  AGENTS.md  BUILD.md  Cargo.toml  Dockerfile  Gemfile  README.md  app.json  go.mod  go.sum  justfile  package-lock.json  package.json  phpunit.xml  sqlc.yaml  vite.config.ts
.claude/: launch.json
.codex/: config.toml
.github/workflows/: ci.yml
app/: _layout.tsx  auth.tsx  create-event.tsx  create-pod.tsx
app/(tabs)/: explore.tsx  index.tsx
app/auth/: callback.tsx
app/controllers/: account_codex_accounts_controller.rb  account_codex_logins_controller.rb  account_deletions_controller.rb  account_exports_controller.rb  account_provider_links_controller.rb  accounts_controller.rb  application_controller.rb  collection_cards_controller.rb  collection_imports_controller.rb  collections_controller.rb  dashboard_controller.rb  deck_ai_evaluations_controller.rb  deck_analysis_exports_controller.rb  deck_exports_controller.rb  deck_shares_controller.rb  decks_controller.rb  email_verifications_controller.rb  game_night_invitations_controller.rb  game_nights_controller.rb  health_controller.rb  matchup_notes_controller.rb  pod_ai_evaluations_controller.rb  pod_shares_controller.rb  pods_controller.rb  public_controller.rb  public_decks_controller.rb  public_pods_controller.rb  registrations_controller.rb  sessions_controller.rb  unresolved_entries_controller.rb
app/forms/: collection_import_form.rb  deck_import_form.rb  game_night_form.rb  pod_form.rb
app/helpers/: application_helper.rb  game_nights_helper.rb
app/jobs/: codex_evaluation_job.rb
app/mailers/: application_mailer.rb  game_night_mailer.rb  user_mailer.rb
app/models/: analysis_run.rb  application_record.rb  audit_event.rb  card_corpus_refresh.rb  card_printing.rb  card_set.rb  card_tag.rb  card_tag_assignment.rb  codex_account.rb  codex_login_attempt.rb  collection_card.rb  collection_import.rb  commander.rb  deck.rb  deck_card.rb  game_night.rb  game_night_deck.rb  game_night_invitation.rb  game_night_player.rb  game_night_pod_result.rb  game_night_pod_seat.rb  legality_snapshot.rb  matchup_note.rb  oracle_card.rb  player.rb  pod.rb  pod_analysis_run.rb  pod_evaluation.rb  pod_slot.rb  provider_link.rb  ruling.rb  salt_social_friction_evidence.rb  scorecard.rb  unresolved_entry.rb  user.rb  user_provider_link.rb
backend/: auth.ts
cmd/pod-tracker-web/: main.go
cmd/pod-tracker-worker/: main.go
config/: application.rb  ci.rb  credentials.yml.enc  database.yml  puma.rb  recurring.yml  routes.rb
config/environments/: production.rb  test.rb
config/initializers/: analysis_quota.rb  codex_app_server.rb  mime_types.rb
config/systemd/: ideal-magic-backup.service  ideal-magic-backup.timer  pod-tracker-backup.service  pod-tracker-backup.timer
crates/pod-core/: Cargo.toml
crates/pod-core/src/: auth.rs  collections.rs  config.rs  decklists.rs  decks.rs  events.rs  games.rs  health.rs  lib.rs  localization.rs  playgroups.rs  pods.rs
crates/pod-db/: Cargo.toml
crates/pod-db/migrations/: 001_extensions.sql  002_identity_sessions.sql  003_playgroups.sql  004_events.sql  005_identity_accounts.sql  009_scryfall_cards.sql  010_decklist_imports.sql  011_deck_card_line_numbers.sql  012_meta_dashboard_views.sql  013_collections.sql  014_audit_events.sql  015_user_preferences.sql  016_card_language_fields.sql
crates/pod-db/optional-migrations/pgvector/: 001_semantic_search.sql
crates/pod-db/src/: audit.rs  collections.rs  decks.rs  events.rs  games.rs  health.rs  identity.rs  lib.rs  meta.rs  migrations.rs  observatory.rs  ops.rs  playgroups.rs  pods.rs  scryfall.rs  semantic.rs
crates/pod-web/: Cargo.toml
crates/pod-worker/: Cargo.toml
crates/pod-worker/src/: lib.rs  scryfall.rs
db/: schema.rb  seeds.rb
db/migrate/: 20260504081657_create_domain_foundation.rb  20260504143000_create_card_corpus_refreshes.rb  20260504170000_add_commander_rules_storage_to_legality_snapshots.rb  20260504190000_create_card_tags_and_assignments.rb  20260504200000_add_profile_and_verification_to_users.rb  20260504210000_create_codex_accounts.rb  20260504220000_create_codex_login_attempts.rb  20260504230000_create_user_provider_links.rb  20260504240000_add_telemetry_to_analysis_runs.rb  20260505000000_replace_pod_evaluations_with_pods.rb  20260505100000_add_bracket_to_scorecards.rb  20260505110000_add_guest_for_pod_to_decks.rb  20260505120000_create_game_nights.rb  20260505121000_create_game_night_pod_records.rb  20260506120000_create_collection_records.rb  20260506170000_create_matchup_notes.rb  20260507120000_add_ai_targets_to_analysis_runs.rb  20260507130000_add_share_token_to_decks.rb  20260508120000_create_game_night_invitations.rb
db/migrations/: 0000_quiet_morlocks.sql
db/seeds/: users.rb
deploy/caddy/: Caddyfile
deploy/env/: production.env.example
deploy/scripts/: backup-restore-drill.sh  backup.sh  deploy.sh  restore.sh
deploy/systemd/: pod-tracker-backup.service  pod-tracker-backup.timer  pod-tracker-web.service  pod-tracker-worker.service
docs/: advanced-intelligence.md  analysis-rubric.md  deployment.md  development.md  localization.md  operations.md  privacy.md  product-scope.md  provider-integrations.md  public-site.md  security.md  supabase-setup.md
docs/runbooks/: postgres-backups.md  scryfall-corpus-refresh.md
internal/auth/: password.go  password_test.go  queries.sql  session.go
internal/config/: config.go
internal/db/: db.go
internal/email/: client.go
lib/: smtp2go_delivery_method.rb
migrations/: 001_extensions.sql  002_identity_sessions.sql  003_playgroups.sql  004_events.sql  005_identity_accounts.sql  006_decks.sql  007_pods.sql  008_games.sql
public/: robots.txt
scripts/: supabase-setup.sql
tests/: bootstrap.php
(+260 files in other folders)
