[workspace]
members = [
  "crates/pod-core",
  "crates/pod-db",
  "crates/pod-web",
  "crates/pod-worker",
]
resolver = "3"

[workspace.package]
authors = ["Stephen Sawyer"]
edition = "2024"
license = "MIT"
repository = "https://github.com/dunamismax/pod-tracker"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.9"
dotenvy = "0.15.7"
http = "1.3.1"
leptos = { version = "0.8.19", default-features = false, features = ["ssr"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "migrate", "macros"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "net", "time"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.10", features = ["compression-full", "fs", "request-id", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.23.1", features = ["v7", "serde"] }

pod-core = { path = "crates/pod-core" }
pod-db = { path = "crates/pod-db" }
