[package]
name = "pod-core"
version = "0.1.0"
description = "Core domain and shared application primitives for Pod Tracker."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
