[package]
name = "pod-core"
version = "1.0.0"
description = "Core domain and shared application primitives for Pod Tracker."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
argon2.workspace = true
base64.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
rand_core.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
