[package]
name = "pod-db"
version = "0.1.0"
description = "PostgreSQL pools, migrations, and repository boundaries for Pod Tracker."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pod-core.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
uuid.workspace = true
