[package]
name = "pod-db"
version = "1.0.0"
description = "PostgreSQL pools, migrations, and repository boundaries for Pod Tracker."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
pod-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
